Fix menu style on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ body {
 }
 
 @media (max-width: 767px) {
-	.menu-item:nth-child(n+3) {
+	.top-bar .menu-item:nth-child(n+3) {
 		display: none;
 	}
 }
